- Localize Warsong Gulch and correct an error on Arathi Basin. Thanks to stfx.