@@ -839,11 +839,10 @@ namespace WCell.RealmServer.Items
 		{
 			if (IsCharter)
 			{
-				PetitionRecord charter;
 				if (!record.New)
 				{
 					// this is executed in the IO-context
-					charter = PetitionRecord.LoadRecord(record.OwnerId);
+					PetitionRecord.LoadRecord(record.OwnerId);
 				}
 			}
 		}
